--- a/views/saved.hbs
+++ b/views/saved.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <a class="navbar-brand" href="#">Mongo News</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
     aria-label="Toggle navigation">
@@ -19,15 +19,15 @@
 </nav>
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4 text-center">Mongo News Scrapper</h1>
-    <p class="lead text-center">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+    <h1 class="display-4 text-center font-weight-bold">Mongo News Scrapper</h1>
+    <p class="lead text-center font-weight-bold">New York Times Edition</p>
   </div>
 </div>
 {{#if news}} {{#each news}}
 <div class="card mx-3 mb-3">
   <h5 class="card-header">
     <a href="{{link}}">{{title}}</a>
-    <button data-id="{{_id}}" class="btn btn-primary show float-right">Comments</button>
+    <button data-id="{{_id}}" class="btn btn-secondary show float-right">Comments</button>
   </h5>
   <div class="card-body">
     <p class="card-text">{{summary}}</p>
@@ -42,14 +42,14 @@
 <div class="modal fade" id="comments" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <div class="modal-body">
+      <div class="modal-body pb-1">
         <div class="prevCom"></div>
         <form>
           <div class="form-group">
             <label for="com-text">Comment Message</label>
             <textarea class="form-control" id="com-text" rows="3"></textarea>
           </div>
-          <button id="new-comment" type="button">Add Comment</button>
+          <button id="new-comment" class="btn btn-secondary" type="button">Add Comment</button>
         </form>
       </div>
       <div class="model-footer">
@@ -60,50 +60,6 @@
 </div>
 
 
-<script>
-  $("#new-comment").on("click", function (e) {
-    const id = $(this).data("id")
-    const text = $("#com-text").val().trim()
-    $.ajax({
-      url: `/submit/${id}`,
-      method: "POST",
-      data: {
-        text: text
-      }
-    }).done(data => {
-      if(data != "not saved")  createComCard(data)
-    })
-  })
+<script src="assets/js/saved.js">
 
-  $(".show").on("click", function (e) {
-    const id = $(this).data("id")
-    $.ajax({
-      url: `/getCom/${id}`,
-      method: "GET"
-    }).done(data => {
-      $(".prevCom").empty()
-      data.forEach(com => {
-        createComCard(com)
-      })
-      $("#new-comment").data("id", id)
-      $("#comments").modal("show")
-    })
-  })
-
-  $(".prevCom").on("click", ".remove", function (e) {
-    const id = $(this).data("id")
-    $.ajax({
-      url: `/noteDel/${id}`,
-      method: "DELETE"
-    }).done(data => {
-      $(this).closest('.card').remove()
-    })
-  })
-
-  function createComCard(obj) {
-    const card = $("<div>").addClass("card")
-    const cardBody = $("<div>").addClass("card-body").text(obj.text)
-    $("<button>").addClass("remove btn btn-secondary float-right").data("id", obj._id).text("x").appendTo(cardBody)
-    card.append(cardBody).appendTo(".prevCom")
-  }
 </script>
